Tap in to the GPU to prevent Chrome and Firefox from using too much CPU during animation

--- a/src/assets/sass/portfolio/base/layout.sass
+++ b/src/assets/sass/portfolio/base/layout.sass
@@ -16,6 +16,7 @@ main.content:not(:last-child)
   background-size: 95%
   margin-bottom: -1em
   animation: animatedBackground 80s linear infinite
+  transform: rotateZ(360deg)
   +tablet
     max-width: 75%
     margin: auto auto -1em auto
